...
  factory EventQuest.fromJson(Map<String, dynamic> json) {
    return EventQuest(
      id: json['id'] as String,
      title: json['title'] as String,
      description: json['description'] as String,
      type: json['type'] as String,
      targets: (json['targets'] as Map<String, dynamic>).map(
        (k, v) => MapEntry(k, v as int),
      ),
      eventPoints: json['eventPoints'] as int,
      rewards: (json['rewards'] as Map<String, dynamic>).map(
        (k, v) => MapEntry(k, v as int),
      ),
...
